--- a/blog_site/blog/templates/blog/about.html
+++ b/blog_site/blog/templates/blog/about.html
@@ -3,7 +3,17 @@
 {% block content %}
 
 <div class="ui segment">
-    <h2>Welcome to about page!</h2>
+    <h2 class="ui right floated header">Welcome to our blog site!</h2>
+    <div class="ui clearing divider"></div>
+    <h3>Do you know what a blog is?</h3>
+    <p>
+        A blog (a shortened version of “weblog”) is an online journal or informational website displaying information in reverse chronological order, with the latest posts appearing first, at the top. It is a platform where a writer or a group of writers share their views on an individual subject.
+    </p>
+    <img class="ui centered  image" src="https://www.hostinger.com/tutorials/wp-content/uploads/sites/2/2022/03/what-is-a-blog.png" alt="img not found">
+    <h3>What is the purpose of a blog?</h3>
+    <p>So, the main purpose of a blog is to connect you to the relevant audience. Another one is to boost your traffic and send quality leads to your website.
+    </p>
+
 </div>
 
 {% endblock %}
