--- a/blog_site/blog/templates/blog/post_detail.html
+++ b/blog_site/blog/templates/blog/post_detail.html
@@ -3,27 +3,38 @@
 {% block content %}
 
 <div class="ui segments">
-    <div class="ui segment"><h2>{{post.title}}</h2></div>
+    <div class="ui segment">
+        {% if not post.published_date %}
+        <a href="{% url 'post_publish' pk=post.pk%}" class="ui secondary button">Publish</a>
+        {% endif %}
+        
+        <h2 class="ui right floated header">{{post.title}}</h2>
+        <div class="ui clearing divider">
+            
+        </div>
+        <p></p>
+      </div>
+    
     <div class="ui segment">
         {% if post.published_date %}
-        <p>{{post.text}}</p>
+        <p>Content: {{post.text}}</p>
         <div >
             <p>Published at: {{post.published_date}}</p>
             <p>Writer: {{post.author.username}}</p>
             
         </div>
         {% else %}
-        <a href="{% url 'post_publish' pk=post.pk%}" class="ui positive button">Publish</a>
+        
 
         {% endif %}
-        <p class="postcontent">{{post.title|safe|linebreaksbr}}</p>
+        <p class="postcontent">{{post.text|safe|linebreaksbr}}</p>
 
         {% if user.is_authenticated%}
         <a href="{% url 'post_edit' pk=post.pk%}" class="ui positive button">Update</a>
         <a href="{% url 'post_remove' pk=post.pk%}" class="ui negative button">Delete</a>
         {% endif %}
 
-        <a href="{% url 'add_comment_to_post' pk=post.pk%}" class="ui positive button">Add comment</a>
+        <a href="{% url 'add_comment_to_post' pk=post.pk%}" class="ui primary button">Add comment</a>
     </div>
     <div class="ui segment">
         {% for comment in post.comments.all %}
@@ -42,7 +53,7 @@
         </div>
         {% endif %}
         {% empty %}
-        <p>This is empty</p>
+        <p>There is no any comments!</p>
         {% endfor %}
     </div>
 </div>
