--- a/blog_site/blog/templates/blog/post_list.html
+++ b/blog_site/blog/templates/blog/post_list.html
@@ -4,16 +4,16 @@
 
 <div class="ui container">
     <div class="ui segment">
-        <h2>Here all posts</h2>
+        <h2><i class="list icon"></i> Here all posts!  </h2>
     </div>
     <div class="ui segments">
         {% for post in post_list %}
          <div class="ui segment">
-            <h3><a href="{% url 'post_detail' pk=post.pk %}">{{post.title}}</a></h3>
+            <h3><a href="{% url 'post_detail' pk=post.pk %}"><i class="pencil alternate icon"></i>{{post.title}}</a></h3>
          </div>
          <div class="ui segment">
-            <p>Published on {{post.published_date|date:"D M Y"}}</p>
-            <p>Comments {{post.approve_comments.count}}</p>
+            <p><i class="calendar alternate outline icon"></i>Published on {{post.published_date|date:"D M Y"}}</p>
+            <p><i class="comment alternate outline icon"></i> Comments: {{post.approve_comments.count}}</p>
          </div>
         {% endfor %}
     </div>
